@@ -1,3 +1,7 @@
+2014-05-08  Corinna Vinschen  <vinschen@redhat.com>
+
+	* lmaccess.h (struct _USER_INFO_24): Define.
+
 2014-04-24  Corinna Vinschen  <vinschen@redhat.com>
 
 	* mstcpip.h: Add LP64 u_long override.
